<resources>
    <string name="app_name">Travel_Social_Network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="l_th_ki_u_anh">Lê Thị Kiều Anh</string>
    <string name="taikhoan">Tài Khoản</string>
    <string name="matkhau">Mật Khẩu</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="you_yet_account">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng ký</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="passcheck">Nhập xác nhận mật khẩu</string>
    <string name="email">Email</string>
    <string name="input_matkhau">Nhập mật khẩu</string>
    <string name="input_email">Nhập Email</string>
    <string name="input_ma">Nhập mã xác nhận</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="input_new_pass">Nhập mật khẩu mới</string>
    <string name="change">Thay đổi</string>
    <string name="edit_post">Chỉnh sửa bài viết</string>
    <string name="back">back</string>
    <string name="save">Lưu</string>
    <string name="pass_old">Nhập mật khẩu cũ</string>
    <string name="forgot">Quên mật khẩu</string>
    <string name="input_display">Nhập tên hiển thị</string>
    <string name="policy">Chính sách và điều khoản</string>
    <string name="input_account">Nhập tên tài khoản</string>
    <string name="change_pass">Thay Đổi Mật Khẩu</string>
    <string name="setting">Cài Đặt</string>
    <string name="logout">Đăng Xuất</string>
    <string name="exit">Thoát</string>
    <string name="notification">Thông Báo</string>
    <string name="addpost">Đăng bài viết</string>
</resources>